// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Multiple useful links should render correctly 1`] = `
.c2 {
  color: #222222;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c2:hover,
.c2:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c0 {
  padding: 0;
  margin: 0;
  list-style-type: none;
}

.c1 {
  padding-top: 0.5rem;
}

<ul
  class="c0"
  role="list"
>
  <li
    class="c1"
    role="listitem"
  >
    <a
      class="c2"
    >
      Mitocinmu da sauko da sautin labarai
    </a>
  </li>
  <li
    class="c1"
    role="listitem"
  >
    <a
      class="c2"
    >
      Labaran BBC Hausa a text
    </a>
  </li>
  <li
    class="c1"
    role="listitem"
  >
    <a
      class="c2"
    >
      Abokan huldar BBC Hausa
    </a>
  </li>
  <li
    class="c1"
    role="listitem"
  >
    <a
      class="c2"
    >
      Timi Frank: Osinbajo ya maka mutum biyu
    </a>
  </li>
  <li
    class="c1"
    role="listitem"
  >
    <a
      class="c2"
    >
      Gwaninta ba ta karbi wani dan Nijeriya
    </a>
  </li>
</ul>
`;

exports[`One useful link should render correctly 1`] = `
.c0 {
  padding-top: 0.5rem;
}

.c1 {
  color: #222222;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c1:hover,
.c1:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

<div
  class="c0"
>
  <a
    class="c1"
  >
    Mitocinmu da sauko da sautin labarai
  </a>
</div>
`;
